--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- CSS propio -->
-  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
 <body>
@@ -24,9 +24,6 @@
     <!-- CONTENEDOR IZQUIERDO (logo + nombre) -->
     <div class="brand-box">
       <a class="navbar-brand brand-link" href="#inicio">
-        <span class="logo-mask">
-          <img src="./assets/img/logo-cafe-nomada.png" alt="Logo Café Nómada">
-        </span>
         <span class="brand-name">Café Nómada</span>
       </a>
     </div>
@@ -80,7 +77,7 @@
             </div>
 
             <div class="col-12 col-lg-5 text-center">
-              <img src="./assets/img/logo-cafe-nomada.png"
+              <img src="/assets/img/logo-cafe-nomada.png"
                    alt="Sello Café Nómada"
                    class="img-fluid hero-logo rounded-4 shadow-sm"
                    loading="lazy">
@@ -144,7 +141,7 @@
         <div class="row g-3">
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card h-100 shadow-sm rounded-4">
-              <img src="./assets/img/cafe-latte-art.jpg" class="card-img-top card-img" alt="Espresso" loading="lazy">
+              <img src="/assets/img/cafe-latte-art.jpg" class="card-img-top card-img" alt="Espresso" loading="lazy">
               <div class="card-body">
                 <h3 class="h5 fw-bold">Espresso</h3>
                 <p class="text-secondary mb-0">Preciso, aromático y con crema estable.</p>
@@ -157,7 +154,7 @@
 
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card h-100 shadow-sm rounded-4">
-              <img src="./assets/img/cafe-latte-art.jpg" class="card-img-top card-img" alt="Capuchino" loading="lazy">
+              <img src="/assets/img/cafe-latte-art.jpg" class="card-img-top card-img" alt="Capuchino" loading="lazy">
               <div class="card-body">
                 <h3 class="h5 fw-bold">Capuchino</h3>
                 <p class="text-secondary mb-0">Balance perfecto entre café y leche.</p>
@@ -170,7 +167,7 @@
 
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card h-100 shadow-sm rounded-4">
-              <img src="./assets/img/cafe-latte-art.jpg" class="card-img-top card-img" alt="Filtrado" loading="lazy">
+              <img src="/assets/img/cafe-latte-art.jpg" class="card-img-top card-img" alt="Filtrado" loading="lazy">
               <div class="card-body">
                 <h3 class="h5 fw-bold">Filtrado</h3>
                 <p class="text-secondary mb-0">Ritual suave y limpio (pour-over o prensa).</p>
@@ -183,7 +180,7 @@
 
           <div class="col-12 col-md-6 col-lg-3">
             <div class="card h-100 shadow-sm rounded-4">
-              <img src="./assets/img/cafe-pasteleria-madera.jpg" class="card-img-top card-img" alt="Dulces" loading="lazy">
+              <img src="/assets/img/cafe-pasteleria-madera.jpg" class="card-img-top card-img" alt="Dulces" loading="lazy">
               <div class="card-body">
                 <h3 class="h5 fw-bold">Café + Dulce</h3>
                 <p class="text-secondary mb-0">El combo ganador para la tarde.</p>
@@ -215,13 +212,13 @@
 
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./assets/img/galeria-cafe-rustico.jpg" class="d-block w-100 carousel-img" alt="Interior rústico" loading="lazy">
+              <img src="/assets/img/galeria-cafe-rustico.jpg" class="d-block w-100 carousel-img" alt="Interior rústico" loading="lazy">
             </div>
             <div class="carousel-item">
-              <img src="./assets/img/galeria-cafe-libros.jpg" class="d-block w-100 carousel-img" alt="Rincón con libros" loading="lazy">
+              <img src="/assets/img/galeria-cafe-libros.jpg" class="d-block w-100 carousel-img" alt="Rincón con libros" loading="lazy">
             </div>
             <div class="carousel-item">
-              <img src="./assets/img/ambiente-cafe-plantas.jpg" class="d-block w-100 carousel-img" alt="Plantas y luz" loading="lazy">
+              <img src="/assets/img/ambiente-cafe-plantas.jpg" class="d-block w-100 carousel-img" alt="Plantas y luz" loading="lazy">
             </div>
           </div>
 
@@ -251,7 +248,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6 text-center">
-            <img src="./assets/img/cafe-para-llevar.jpg" class="img-fluid rounded-4 shadow-sm section-img" alt="Café para llevar" loading="lazy">
+            <img src="/assets/img/cafe-para-llevar.jpg" class="img-fluid rounded-4 shadow-sm section-img" alt="Café para llevar" loading="lazy">
           </div>
         </div>
       </div>
